--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-export-excel": "^0.5.3",
+    "react-html-table-to-excel": "^2.0.0",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
